Fix spacing of items in the header

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
     display: flex;
     gap: 1rem;
     justify-content: center;
+    align-items: center;
 }
 
 .colored-text {
